[gd_scene load_steps=8 format=3 uid="uid://b840dg7lgcsor"]

[ext_resource type="Script" path="res://scenes/high_score_score/high_score_scene.gd" id="1_57qul"]
[ext_resource type="FontFile" uid="uid://bwfc7ghlkd2x2" path="res://assets/fonts/custom_font.ttf" id="2_7jmad"]
[ext_resource type="Texture2D" uid="uid://i66p38rq7vc8" path="res://assets/images/backdrop.png" id="2_vpk80"]
[ext_resource type="FontVariation" uid="uid://cs4lytfyex3he" path="res://assets/fonts/ui_font_theme.tres" id="3_nuhd0"]
[ext_resource type="Texture2D" uid="uid://bh5yrdb46nali" path="res://assets/images/home_button.png" id="4_6mss8"]
[ext_resource type="Texture2D" uid="uid://dcih1xrbraoa0" path="res://assets/images/home_button_pressed.png" id="5_xqfvx"]

[sub_resource type="FontVariation" id="FontVariation_gnn6l"]
base_font = ExtResource("2_7jmad")
variation_embolden = 0.25

[node name="HighScoreScene" type="Node2D"]
script = ExtResource("1_57qul")

[node name="Background" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="BackgroundColorRect" type="ColorRect" parent="Background"]
offset_right = 640.0
offset_bottom = 1440.0
color = Color(0.384314, 0.0392157, 0.576471, 1)
metadata/_edit_lock_ = true

[node name="MainMenuBackdrop" type="Sprite2D" parent="Background"]
position = Vector2(320, 720)
texture = ExtResource("2_vpk80")
metadata/_edit_lock_ = true

[node name="DarkTintColorRect" type="ColorRect" parent="Background"]
offset_right = 640.0
offset_bottom = 1440.0
color = Color(0, 0, 0, 0.501961)
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="HighScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
offset_top = 272.0
offset_right = 640.0
offset_bottom = 544.0
theme_override_fonts/font = SubResource("FontVariation_gnn6l")
theme_override_font_sizes/font_size = 152
text = "HIGH SCORE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="FirstHighScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 160.0
offset_top = 515.48
offset_right = 280.0
offset_bottom = 591.2
theme_override_fonts/font = ExtResource("3_nuhd0")
theme_override_font_sizes/font_size = 64
text = "1st
"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="FirstHighScoreValueLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 320.0
offset_top = 515.48
offset_right = 416.0
offset_bottom = 591.2
theme_override_fonts/font = ExtResource("3_nuhd0")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SecondHighScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 160.0
offset_top = 595.48
offset_right = 280.0
offset_bottom = 671.2
theme_override_fonts/font = ExtResource("3_nuhd0")
theme_override_font_sizes/font_size = 64
text = "2nd"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SecondHighScoreValueLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 320.0
offset_top = 595.48
offset_right = 416.0
offset_bottom = 671.2
theme_override_fonts/font = ExtResource("3_nuhd0")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ThirdHighScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 160.0
offset_top = 675.48
offset_right = 280.0
offset_bottom = 751.2
theme_override_fonts/font = ExtResource("3_nuhd0")
theme_override_font_sizes/font_size = 64
text = "3rd"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ThirdHighScoreValueLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.313
anchor_right = 1.0
anchor_bottom = 0.42
offset_left = 320.0
offset_top = 675.48
offset_right = 416.0
offset_bottom = 751.2
theme_override_fonts/font = ExtResource("3_nuhd0")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="HomeTouchScreenButton" type="TouchScreenButton" parent="Control"]
position = Vector2(256, 856)
texture_normal = ExtResource("4_6mss8")
texture_pressed = ExtResource("5_xqfvx")
metadata/_edit_lock_ = true

[connection signal="released" from="Control/HomeTouchScreenButton" to="." method="_on_home_touch_screen_button_released"]
